Table scrolling: row height synchronization in progress; misc. code revisions; upgraded JSON classes to the latest version
git-svn-id: http://svn-new/TeamDev/OpenFaces/trunk@494 7826287f-d7cb-499f-91f0-9f45672cc948