@@ -66,7 +66,7 @@ import java.util.Map;
  * </ul>
 
  * @author JSON.org
- * @version 2008-09-18
+ * @version 2009-04-13
  */
 public class JSONArray {
 
@@ -124,7 +124,7 @@ public class JSONArray {
             case ']':
             case ')':
                 if (q != c) {
-                    throw x.syntaxError("Expected a '" + q + "'");
+                    throw x.syntaxError("Expected a '" + new Character(q) + "'");
                 }
                 return;
             default:
@@ -163,11 +163,19 @@ public class JSONArray {
      * @throws JSONException If not an array.
      */
 
-    public JSONArray(Collection collection,boolean includeSuperClass) {
+    public JSONArray(Collection collection, boolean includeSuperClass) {
 		this.myArrayList = new ArrayList();
-		if(collection != null) {
-			for (Iterator iter = collection.iterator(); iter.hasNext();) {
-				this.myArrayList.add(new JSONObject(iter.next(),includeSuperClass));
+		if (collection != null) {
+			Iterator iter = collection.iterator();;
+			while (iter.hasNext()) {
+			    Object o = iter.next();
+			    if (o instanceof Map) {
+			    	this.myArrayList.add(new JSONObject((Map)o, includeSuperClass));
+			    } else if (!JSONObject.isStandardProperty(o.getClass())) {
+			    	this.myArrayList.add(new JSONObject(o, includeSuperClass));
+			    } else {
+                    this.myArrayList.add(o);
+				}
 			}
 		}
     }
@@ -200,7 +208,12 @@ public class JSONArray {
         if (array.getClass().isArray()) {
             int length = Array.getLength(array);
             for (int i = 0; i < length; i += 1) {
-                this.put(new JSONObject(Array.get(array, i),includeSuperClass));
+                Object o = Array.get(array, i);
+                if (JSONObject.isStandardProperty(o.getClass())) {
+                    this.myArrayList.add(o);
+                } else {
+                    this.myArrayList.add(new JSONObject(o,includeSuperClass));
+                }
             }
         } else {
             throw new JSONException("JSONArray initial value should be a string or collection or array.");
@@ -607,7 +620,7 @@ public class JSONArray {
      * @return this.
      */
     public JSONArray put(double value) throws JSONException {
-        Double d = Double.valueOf(value);
+        Double d = new Double(value);
         JSONObject.testValidity(d);
         put(d);
         return this;
@@ -621,7 +634,7 @@ public class JSONArray {
      * @return this.
      */
     public JSONArray put(int value) {
-        put(Integer.valueOf(value));
+        put(new Integer(value));
         return this;
     }
 
@@ -633,7 +646,7 @@ public class JSONArray {
      * @return this.
      */
     public JSONArray put(long value) {
-        put(Long.valueOf(value));
+        put(new Long(value));
         return this;
     }
 
@@ -719,7 +732,7 @@ public class JSONArray {
      * @throws JSONException If the index is negative.
      */
     public JSONArray put(int index, int value) throws JSONException {
-        put(index, Integer.valueOf(value));
+        put(index, new Integer(value));
         return this;
     }
 
@@ -734,7 +747,7 @@ public class JSONArray {
      * @throws JSONException If the index is negative.
      */
     public JSONArray put(int index, long value) throws JSONException {
-        put(index, Long.valueOf(value));
+        put(index, new Long(value));
         return this;
     }
 
@@ -780,6 +793,19 @@ public class JSONArray {
             put(value);
         }
         return this;
+    }
+
+
+    /**
+     * Remove an index and close the hole.
+     * @param index The index of the element to be removed.
+     * @return The value that was associated with the index,
+     * or null if there was no value.
+     */
+    public Object remove(int index) {
+    	Object o = opt(index);
+        this.myArrayList.remove(index);
+        return o;
     }
 
 
